syntax="proto3";

option go_package = "github.com/hungq1205/watch-party/protogen/movies";

service MovieService {
    rpc CreateBox(CreateRequest) returns (MovieBoxIdentifier) {}
    rpc DeleteBox(MovieBoxIdentifier) returns (MovieActionResponse) {}
    rpc AddToBox(UserBoxRequest) returns (MovieActionResponse) {}
    rpc RemoveFromBox(UserBoxRequest) returns (MovieActionResponse) {}
    rpc GetBox(MovieBoxIdentifier) returns (MovieBox) {}
    rpc SetBox(MovieBox) returns (MovieActionResponse) {}
    rpc UserOfBox(MovieBoxIdentifier) returns (UserOfBoxResponse) {}
    rpc BoxOfUser(BoxOfUserRequest) returns (MovieBoxIdentifier) {}
    rpc ValidateOwner(UserBoxRequest) returns (MovieActionResponse) {}

    rpc GetMovie(MovieIdentifier) returns (Movie) {}
}

message BoxOfUserRequest {
    int64 UserId = 1;
}

message MovieActionResponse {
    bool Success = 1;
}

message MovieBoxIdentifier {
    int64 BoxId = 1;
}

message MovieIdentifier {
    int64 MovieId = 1;
}

message Movie {
    int64 MovieId = 1;
    string Title = 2;
    string Url = 3;
    string PosterUrl = 4;
}

message MovieBox {
    int64 BoxId = 1;
    int64 OwnerId = 2;
    int64 MsgBoxId = 3;
    float Elapsed = 4;
    string MovieUrl = 5;
    string Password = 6;
}

message UserOfBoxResponse {
    repeated int64 UserIds = 1;
}

message CreateRequest {
    int64 OwnerId = 1;
    int64 MsgBoxId = 2;
    string Password = 3;
}

message UserBoxRequest {
    int64 BoxId = 1;
    int64 UserId = 2;
}